# python-grpc-server-langchain-ai

./: Dockerfile  README.md  dummyServer.py  grpcServer.py  inference.proto  inference_pb2.py  inference_pb2_grpc.py  pyproject.toml  requirements.txt
deployment/: deployment.yaml
scripts/: generateGoGrpcCode.sh  generatePythonGrpcCode.sh
